# gimp-apng

./: .gitignore  HACKING  Makefile.am  NEWS  README  TODO  configure.in
.github/workflows/: ubuntu.yml  windows.yml
po/: POTFILES.in
src/: Makefile.am  file-apng.c
ui/: Makefile.am  plug-in-file-apng.ui
